# SpotifyPredictor

./: README.md
spotify-Predictor-app/: package-lock.json  package.json
spotify-Predictor-app/src/: App.jsx  index.css  predict.jsx
spotify-predictor-frontend/: package-lock.json  package.json
spotify_Predictor/: .gitignore  Cargo.toml  secret.env
spotify_Predictor/src/: data.rs  decision_tree.rs  hash_track.rs  main.rs  model.rs  predict.rs  preprocess.rs  processCSV.py  similar.rs  to_csv.rs  token.rs
