[package]
name = "spotify_Predictor"
version = "0.1.0"
edition = "2024"

[dependencies]
linfa = "0.7.0"
linfa-logistic = "0.7.0"
linfa-preprocessing = "0.7.0"
linfa-trees = "0.7"
ndarray = "0.15"
rand = "0.8"
rand_chacha = "0.3"
csv = "1.1"
serde = {version = "1", features = ["derive"]}
serde_json = "1.0"
base64 = "0.21" 
dotenv = "0.15"
reqwest = {version = "0.12.15", features = ["blocking", "json"]}
urlencoding = "2.1.3"